@@ -4,6 +4,8 @@
 # Uncomment if you wish to use the linux input layer event interface
 module_raw input
 
+# For all other userspace driver modules, see the ts.conf man page
+
 # Uncomment if you're using an eGalax Touch version 0112, 210 or 0100
 # module_raw galax
 
